apps/wolweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolweb
  namespace: wolweb
spec:
  ingressClassName: cloudflare
  rules:
  - host: wol.youkan.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wolweb
            port:
              number: 8089
